@@ -5,44 +5,42 @@ import com.chefmate.model.BaseProduct;
 import com.chefmate.repo.BaseProductRepository;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 @Service
+@RequiredArgsConstructor
 public class BaseProductService {
     private final BaseProductRepository baseProductRepository;
     private final UnitService unitService;
 
-    public BaseProductService(BaseProductRepository baseProductRepository, UnitService unitService) {
-        this.baseProductRepository = baseProductRepository;
-        this.unitService = unitService;
-    }
-
     @Transactional(readOnly = true)
     public List<BaseProductDto> findAll() {
-        return baseProductRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return baseProductRepository.findAll().stream().map(this::toDto).toList();
     }
 
     @Transactional
     public BaseProductDto create(BaseProductDto dto) {
         BaseProduct entity = fromDto(dto);
-        entity.id = UUID.randomUUID();
+        entity.setId(UUID.randomUUID());
         return toDto(baseProductRepository.save(entity));
     }
 
     @Transactional
     public BaseProductDto update(UUID id, BaseProductDto dto) {
-        BaseProduct entity = baseProductRepository.findById(id).orElseThrow(() ->
-                new ResponseStatusException(HttpStatus.NOT_FOUND, "Base product not found"));
-        entity.name = dto.name != null ? dto.name.trim() : entity.name;
-        if (dto.unit != null) {
-            entity.unit = resolveUnit(dto.unit);
+        BaseProduct entity = baseProductRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Base product not found"));
+        if (dto.name() != null) {
+            entity.setName(dto.name().trim());
         }
-        if (dto.isFreezable != null) {
-            entity.isFreezable = dto.isFreezable;
+        if (dto.unit() != null) {
+            entity.setUnit(resolveUnit(dto.unit()));
+        }
+        if (dto.isFreezable() != null) {
+            entity.setIsFreezable(dto.isFreezable());
         }
         return toDto(baseProductRepository.save(entity));
     }
@@ -61,19 +59,15 @@ public class BaseProductService {
     }
 
     private BaseProductDto toDto(BaseProduct entity) {
-        BaseProductDto dto = new BaseProductDto();
-        dto.id = entity.id;
-        dto.name = entity.name;
-        dto.unit = entity.unit;
-        dto.isFreezable = entity.isFreezable;
-        return dto;
+        return new BaseProductDto(entity.getId(), entity.getName(), entity.getUnit(), entity.getIsFreezable());
     }
 
     private BaseProduct fromDto(BaseProductDto dto) {
         BaseProduct entity = new BaseProduct();
-        entity.name = dto.name != null ? dto.name.trim() : null;
-        entity.unit = dto.unit != null ? resolveUnit(dto.unit) : unitService.getDefaultUnit().shortName;
-        entity.isFreezable = dto.isFreezable != null ? dto.isFreezable : Boolean.TRUE;
+        entity.setName(dto.name() != null ? dto.name().trim() : null);
+        String unitShort = dto.unit() != null ? resolveUnit(dto.unit()) : unitService.getDefaultUnit().getShortName();
+        entity.setUnit(unitShort);
+        entity.setIsFreezable(dto.isFreezable() != null ? dto.isFreezable() : Boolean.TRUE);
         return entity;
     }
 
