@@ -10,48 +10,38 @@ import com.chefmate.repo.UserRepository;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 @Service
+@RequiredArgsConstructor
 public class ClientStockService {
     private final ClientStockRepository clientStockRepository;
     private final UserRepository userRepository;
     private final BaseProductRepository baseProductRepository;
 
-    public ClientStockService(ClientStockRepository clientStockRepository,
-                              UserRepository userRepository,
-                              BaseProductRepository baseProductRepository) {
-        this.clientStockRepository = clientStockRepository;
-        this.userRepository = userRepository;
-        this.baseProductRepository = baseProductRepository;
-    }
-
     @Transactional(readOnly = true)
     public List<ClientStockDto> getClientStock(Long userId) {
-        return clientStockRepository.findByUserId(userId).stream().map(this::toDto).collect(Collectors.toList());
+        return clientStockRepository.findByUserId(userId).stream().map(this::toDto).toList();
     }
 
     @Transactional
     public ClientStockDto saveStock(Long userId, ClientStockDto dto) {
-        User user = userRepository.findById(userId).orElseThrow(() ->
-                new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
-        BaseProduct baseProduct = baseProductRepository.findById(dto.baseProductId)
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
+        BaseProduct baseProduct = baseProductRepository.findById(dto.baseProductId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Base product not found"));
-        ClientStock stock;
-        if (dto.id != null) {
-            stock = clientStockRepository.findByIdAndUserId(dto.id, userId)
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Stock not found"));
-        } else {
-            stock = new ClientStock();
-            stock.user = user;
-        }
-        stock.baseProduct = baseProduct;
-        stock.unit = baseProduct.unit;
-        stock.qty = normalizeQuantity(dto.qty);
+        ClientStock stock = dto.id() != null
+                ? clientStockRepository.findByIdAndUserId(dto.id(), userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Stock not found"))
+                : new ClientStock();
+        stock.setUser(user);
+        stock.setBaseProduct(baseProduct);
+        stock.setUnit(baseProduct.getUnit());
+        stock.setQty(normalizeQuantity(dto.qty()));
         return toDto(clientStockRepository.save(stock));
     }
 
@@ -77,14 +67,17 @@ public class ClientStockService {
     }
 
     private ClientStockDto toDto(ClientStock stock) {
-        ClientStockDto dto = new ClientStockDto();
-        dto.id = stock.id;
-        dto.baseProductId = stock.baseProduct != null ? stock.baseProduct.id : null;
-        dto.baseProductName = stock.baseProduct != null ? stock.baseProduct.name : null;
-        dto.qty = stock.qty;
-        dto.unit = stock.unit;
-        dto.isFreezable = stock.baseProduct != null ? stock.baseProduct.isFreezable : null;
-        return dto;
+        BaseProduct baseProduct = stock.getBaseProduct();
+        UUID baseProductId = baseProduct != null ? baseProduct.getId() : null;
+        String baseProductName = baseProduct != null ? baseProduct.getName() : null;
+        Boolean isFreezable = baseProduct != null ? baseProduct.getIsFreezable() : null;
+        return new ClientStockDto(
+                stock.getId(),
+                baseProductId,
+                stock.getQty(),
+                stock.getUnit(),
+                baseProductName,
+                isFreezable);
     }
 
     private BigDecimal normalizeQuantity(BigDecimal qty) {
